# Tollway-PQC

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: dudect_bench.rs
crates/tollway/: Cargo.toml
crates/tollway-hpke/: Cargo.toml
crates/tollway-hpke/src/: error.rs  format.rs  hpke.rs  kdf.rs  lib.rs
crates/tollway-hpke/src/mode/: auth.rs  base.rs  mod.rs  psk.rs
crates/tollway-pqxdh/: Cargo.toml
crates/tollway-pqxdh/src/: bundle.rs  error.rs  lib.rs  session.rs
crates/tollway-primitives/: Cargo.toml
crates/tollway-primitives/src/: error.rs  lib.rs  traits.rs
crates/tollway-primitives/src/aead/: mod.rs
crates/tollway-primitives/src/hybrid/: kem_combiner.rs  mod.rs
crates/tollway-primitives/src/kem/: mlkem.rs  mod.rs  x25519.rs
crates/tollway-primitives/src/sig/: mldsa.rs  mod.rs
crates/tollway/src/: error.rs  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_hpke_open.rs  fuzz_kem_decap.rs  fuzz_wire_parse.rs
tests/interop/: security.rs
tests/kat/: kats.rs  mldsa_kat.rs  mlkem_kat.rs
tollway-core/: Cargo.toml  README.md
tollway-core/src/: constants.rs
tollway-core/src/fips/: state.rs
tollway-core/src/primitives/: aead.rs  kdf.rs
tollway-core/tests/: nist_vectors.rs
tollway-keys/: Cargo.toml
tollway-keys/benches/: key_operations.rs
tollway-keys/examples/: basic_key_management.rs
tollway-keys/tests/: lifecycle.rs  recovery.rs  rotation.rs
