[workspace]
members = ["tollway-core"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Tollway Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tollway-qpc/tollway-pqc"
homepage = "https://tollway.net"
keywords = [
    "cryptography",
    "post-quantum",
    "pqc",
    "encryption",
    "quantum-resistant",
]
categories = ["cryptography", "authentication"]

[workspace.dependencies]
# Post-quantum cryptography primitives
pqcrypto = "0.18.1"

# Symmetric cryptography
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha3 = "0.10"

# Constant-time operations
subtle = "2.6"

# Utilities
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.10.0"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
bincode = "3.0"

# Async (for future)
tokio = { version = "1", features = ["full"] }

# Logging and observability
tracing = "0.1"
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for identity management
uuid = { version = "1.6", features = ["v4", "serde"] }

# Platform memory locking (FIPS secure memory)
libc = "0.2"
windows-sys = { version = "0.61", features = ["Win32_System_Memory"] }

# Testing
criterion = "0.8.2"
quickcheck = "1.0"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
