[workspace]
members = [
    "tollway-core",
    "crates/tollway-primitives",
    "crates/tollway-hpke",
    "crates/tollway-pqxdh",
    "crates/tollway",
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["Tollway Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tollway-qpc/tollway-pqc"
homepage = "https://tollway.net"
keywords = [
    "cryptography",
    "post-quantum",
    "pqc",
    "encryption",
    "quantum-resistant",
]
categories = ["cryptography", "authentication"]

[workspace.dependencies]
# Post-quantum cryptography primitives
ml-kem = { version = "0.3", default-features = false }
ml-dsa = { version = "0.1", default-features = false }

# Classical cryptography
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }

# Symmetric cryptography
aead = { version = "0.5", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false }
aes-gcm = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }

# Utilities
zeroize = { version = "1.8", default-features = false }
hybrid-array = "0.2"
typenum = "1.17"
rand = "0.8"
rand_core = "0.6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

# Platform memory locking (FIPS secure memory - kept for future use if needed)
libc = "0.2"
windows-sys = { version = "0.61", features = ["Win32_System_Memory"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
