[package]
name = "tollway-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Post-quantum cryptographic primitives with forward secrecy and authentication"

[dependencies]
#PQ Primatives
pqcrypto.workspace = true

# Symmetric Primitives
chacha20poly1305 = "0.10"
hkdf.workspace = true
sha3.workspace = true

# Constant-time operations
subtle.workspace = true

#Utils
zeroize.workspace = true
rand.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

# FIPS-approved symmetric cipher
aes-gcm = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
quickcheck.workspace = true
proptest.workspace = true
hex = "0.4"

[features]
default = []
serde = ["dep:serde"]
std = []
fips = ["dep:aes-gcm", "dep:libc", "dep:windows-sys"]

[[bench]]
name = "seal_open_bench"
harness = false
[[bench]]
name = "comprehensive"
harness = false