[package]
name = "tollway-hpke"
version = "2.0.0-alpha.1"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tollway-primitives = { path = "../tollway-primitives" }
aead.workspace = true
chacha20poly1305 = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
hkdf.workspace = true
sha2.workspace = true
zeroize.workspace = true

[features]
default = ["chacha20", "aes-gcm-aead", "std"]
chacha20 = ["dep:chacha20poly1305"]
aes-gcm-aead = ["dep:aes-gcm"]
cnsa = ["aes-gcm-aead"]
std = []
alloc = []
