[package]
name = "tollway-primitives"
version = "2.0.0-alpha.1"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
ml-kem.workspace = true
ml-dsa.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
hybrid-array.workspace = true
typenum.workspace = true
rand_core.workspace = true

[dev-dependencies]
hex-literal = "0.4"
serde_json = "1"
serde.workspace = true
